Fix: Collapse user list

--- a/src/view/pages/Main/MainHeader/MainHeader.scss
+++ b/src/view/pages/Main/MainHeader/MainHeader.scss
@@ -27,7 +27,7 @@
 }
 
 .list-container {
-    flex: 1;
+    flex: 3;
     display: flex;
   	flex-direction: column;
     overflow-y: scroll;
